Add a peview list before dowload the playlist with the coincidences

--- a/src/delivery/web/index.html
+++ b/src/delivery/web/index.html
@@ -7,19 +7,23 @@
     <script type="module" src="index.js" defer></script>
 </head>
 <body>
-<h1>SPOKTOR</h1>
-<form action="">
-    <fieldset>
-        <label for="spotify">Spotify Playlist:</label>
-        <input type="file" id="spotify">
-    </fieldset>
+<aside id="spotify-content"></aside>
+<section>
+    <h1>SPOKTOR</h1>
+    <form action="">
+        <fieldset>
+            <label for="spotify">Spotify Playlist:</label>
+            <input type="file" id="spotify">
+        </fieldset>
 
-    <fieldset>
-        <label for="traktor">Traktor Collection:</label>
-        <input type="file" id="traktor">
-    </fieldset>
+        <fieldset>
+            <label for="traktor">Traktor Collection:</label>
+            <input type="file" id="traktor">
+        </fieldset>
 
-    <input type="submit" value="Intersect">
-</form>
+        <input type="submit" value="Intersect">
+    </form>
+</section>
+<section id="result"></section>
 </body>
 </html>
