--- a/src/delivery/web/index.html
+++ b/src/delivery/web/index.html
@@ -3,27 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Spoktor</title>
-    <link rel="stylesheet" href="style.css">
     <script type="module" src="index.js" defer></script>
 </head>
 <body>
-<aside id="spotify-content"></aside>
-<section>
-    <h1>SPOKTOR</h1>
-    <form action="">
-        <fieldset>
-            <label for="spotify">Spotify Playlist:</label>
-            <input type="file" id="spotify">
-        </fieldset>
-
-        <fieldset>
-            <label for="traktor">Traktor Collection:</label>
-            <input type="file" id="traktor">
-        </fieldset>
-
-        <input type="submit" value="Intersect">
-    </form>
-</section>
-<section id="result"></section>
+<spk-main></spk-main>
 </body>
 </html>
