--- a/src/delivery/server-side/public/index.html
+++ b/src/delivery/server-side/public/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles.css">
-    <script src="./htmx.min.js"></script>
+    <script src="./htmx.min.js" defer></script>
     <title>Spoktor</title>
 </head>
 <body>
