--- a/src/delivery/server-side/public/index.html
+++ b/src/delivery/server-side/public/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles.css">
     <script src="./htmx.min.js" defer></script>
+    <script type="module" src="./index.js" defer></script>
     <title>Spoktor</title>
 </head>
 <body>
@@ -17,12 +18,11 @@
         <form action="">
             <fieldset>
                 <label for="needles">Playlist File:</label>
-                <input type="file" id="needles">
+                <input type="file" id="needles" >
             </fieldset>
-
             <fieldset>
                 <label for="haystack">Music Collection File:</label>
-                <input type="file" id="haystack">
+                <input type="file" id="haystack" >
             </fieldset>
         </form>
     </section>
