Make spoktor UI work

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     </section>
     <section class="yt-form">
         <h2>Youtube videos list to playlist</h2>
-        <form class="youtube-playlist"
+        <form class="youtube-playlist">
             <textarea name="youtube-video-list" ></textarea>
             <input type="submit" value="Get Link">
             <section id="youtube-playlist-link"></section>
@@ -35,25 +35,6 @@
     </section>
 </aside>
 
-<section>
-<button id="download">Download playlist with the selected coincidences</button>
-<ol class="result">
-    <li>
-        Artist: Ed Sheeran John<br>Song: Perfect
-        <ul>
-            <li>
-                <label><input type="checkbox" data-playlist-position="4" data-coincidences-position="0" id="4-0"
-                              checked="">
-                    Artist: Ed_Sheran<br>Song: Perfect
-                </label></li>
-            <li>
-                <label><input type="checkbox" data-playlist-position="4" data-coincidences-position="1" id="4-1"
-                              checked="">
-                    Artist: Ed Sheeran<br>Song: Perfect
-                </label></li>
-        </ul>
-    </li>
-</ol>
-</section>
+<section class="result"></section>
 </body>
 </html>
